@@ -1,1 +1,4 @@
 # Java-Sheets
+InteliJ
+Libraries: org.openjfx:javafx-fxml:19
+VM arguments: --module-path lib --add-modules javafx.controls,javafx.fxml
